--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id= "hero"></section>
     <section class="content">
         <div id="search-engine-optimization" class="online-reputation-management" >
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization title"  class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization hero picture"  class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
