--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
     <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead generation icon"/>
+            <img src="./assets/images/lead-generation.png" alt="Lead generation Title"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand awareness icon"/>
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness Title"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost management icon"/>
+            <img src="./assets/images/cost-management.png" alt="Cost management Title"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </section>
     <footer class="footer">
-        <h2>Made with ❤️️ by L'Arc en Ciel</h2>
+        <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2022 L'Arc en Ciel Social Solution Services, Inc.
+            &copy; 2022 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
