added comments,consolidated elements w/ same style

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
     <section id= "hero"></section>
     <section class="content">
+        <!--added id for search engine optimization-->
         <div id="search-engine-optimization" class="online-reputation-management" >
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization hero picture"  class="float-left" />
             <h2>Search Engine Optimization</h2>
